# anomaly_detection

./: .coverage  .cursorignore  .gitignore  CLAUDE.md  IMPLEMENTATION_PLAN.md  LICENSE  Makefile  PRD.md  README.md  generate_test_data.py  pyproject.toml  requirements.txt
anomaly_detection/: __init__.py
anomaly_detection.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
anomaly_detection/core/: __init__.py
anomaly_detection/demo/: __init__.py
anomaly_detection/engine/: __init__.py  circuit_breaker.py  tracker.py
anomaly_detection/llm/: __init__.py
core/: models.py  rules.py
demo/: simulator.py
docs/: sybolic-neural-bridge.md
engine/: tracker.py
llm/: __init__.py  analyser.py
src/: anomaly_tracker.py  models.py
tests/: conftest.py  test_anomaly_tracker.py
tests/core/: test_models.py  test_rules.py
tests/demo/: test_simulator.py
tests/engine/: test_circuit_breaker.py  test_tracker.py
tests/llm/: test_llm.py
