[project]
name = "anomaly-detection"
version = "0.1.0"
description = "Stream-based security anomaly detector (rules + LLM hybrid)"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "anthropic>=0.26.0",
    "pydantic>=2.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
]

[project.scripts]
anomaly-demo = "anomaly_detection.demo.simulator:run_main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["anomaly_detection*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.coverage.run]
branch = true
source = ["anomaly_detection"]

[tool.coverage.report]
fail_under = 100
show_missing = true
